Images were fixed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Politics & Confidential",
-  "name": "Adrenalin Drive: Politics & Confidential",
+  "short_name": "Politics & Confidential / Rus",
+  "name": "Adrenalin Drive: Politics & Confidential / Rus",
   "icons": [
     {
       "src": "favicon.ico",
